Fix vertical alignment of destinations

--- a/style/component/AppNav.scss
+++ b/style/component/AppNav.scss
@@ -91,6 +91,7 @@
 			font-weight: 600;
 			margin-right: 20px;
 			text-transform: uppercase;
+			padding-bottom: 4px;
 			
 			@for $i from 1 through 20 {
 				&:nth-child(#{$i}) {
